HBASE-10735 [WINDOWS] Set -XX:MaxPermSize for unit tests
git-svn-id: https://svn.apache.org/repos/asf/hbase/branches/0.98@1578688 13f79535-47bb-0310-9956-ffa450edef68